# difftree

./: README.md  app-config.c  app-config.h  child-process-util.c  child-process-util.h  diff-tree-main.c  diff-tree-model.c  diff-tree-model.h  diff-tree-view.c  diff-tree-view.h  git-difftree  meson.build  ref-count-struct.c  ref-count-struct.h  settings-window.c  settings-window.h  source-helpers.c  source-helpers.h  tree-source-base.c  tree-source-base.h  tree-source-fs.c  tree-source-fs.h  tree-source-zip.c  tree-source-zip.h  tree-source.c  tree-source.h  zip-input-stream.c  zip-input-stream.h  zipfd.c  zipfd.h
